# vigil3d

./: .gitignore  EVALUATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: analysis_config.yaml  data_config.yaml  eval_config.yaml  inference_config.yaml  train_config.yaml
config/data/: 3dgrand.yaml  arkitscenerefer.yaml  arkitscenes.yaml  instruct3d.yaml  manual_analysis.yaml  multi3drefer.yaml  nr3d.yaml  scannet.yaml  scanrefer.yaml  scanscribe.yaml  sceneverse.yaml  sr3dp.yaml  toy.yaml  vigil3d_all.yaml  vigil3d_scannet.yaml  vigil3d_scannetpp.yaml
config/model/: predictions.yaml  toy.yaml
data/: README.md  vigil3d_scannet.csv  vigil3d_scannetpp.csv
docs/: index.html
ovfgvg/callbacks/: mask_3d.py  region_3d.py
ovfgvg/data/: filter.py  types.py
ovfgvg/data/analysis/: README.md  directparse.py
ovfgvg/data/dataset/: __init__.py  clip_dataset.py  predictions_dataset.py  toy_dataset.py
ovfgvg/data/modules/: __init__.py  base.py  text.py
ovfgvg/data/preprocessing/: __init__.py  base.py  ovfgvg.py  scanrefer.py
ovfgvg/data/utils/: __init__.py  base.py  box_adapters.py  scannet.py  scannetpp.py
ovfgvg/data/visualization/: __init__.py  bbox.py  pointcloud.py
ovfgvg/metrics/: __init__.py
ovfgvg/modules/: __init__.py
ovfgvg/utils/: alignment.py  env.py  helper.py  timer.py
setup/: install_cu121.sh
